--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extracting Files...</title>
+    <title>Project Scav</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,6 @@
 </head>
 <body>
     <div class="scene">
-        <!-- Wall Elements -->
         <div class="misc-note" style="top: 2.5%; left: 6%; width: 6%; height: 2.5%;"></div>
         <div class="misc-note" style="top: 2.5%; right: 16%; width: 6%; height: 2.5%;"></div>
         
@@ -47,7 +46,7 @@
                             <stop offset="100%" style="stop-color:#D300C5"/>
                         </linearGradient>
                     </defs>
-                    <path fill="url(#ig-gradient)" d="M16 2.88c4.27 0 4.78.02 6.47.09 1.56.07 2.4.36 3.03.62.77.31 1.34.73 1.9 1.3.56.56.98 1.13 1.3 1.9.26.63.55 1.47.62 3.03.07 1.69.09 2.2.09 6.47s-.02 4.78-.09 6.47c-.07 1.56-.36 2.4-.62 3.03-.31.77-.73 1.34-1.3 1.9-.56.56-1.13.98-1.9 1.3-.63.26-1.47.55-3.03.62-1.69.07-2.2.09-6.47.09s-4.78-.02-6.47-.09c-1.56-.07-2.4-.36-3.03-.62-.77-.31-1.34-.73-1.9-1.3-.56-.56-.98-1.13-1.3-1.9-.26-.63-.55-1.47-.62-3.03-.07-1.69-.09-2.2-.09-6.47s.02-4.78.09-6.47c.07-1.56.36-2.4.62-3.03.31-.77.73-1.34 1.3-1.9.56-.56 1.13-.98 1.9-1.3.63-.26 1.47-.55 3.03-.62C11.22 2.9 11.73 2.88 16 2.88zm0-2.88c-4.35 0-4.88.02-6.58.1-1.7.07-2.87.38-3.88.77-1.02.4-1.88.96-2.73 1.82-1.74 1.74-2.78 4.02-2.84 6.6C0 11.12 0 11.65 0 16s0 4.88.06 6.58c.07 2.58 1.1 4.86 2.84 6.6 1.74 1.74 4.02 2.78 6.6 2.84 1.7.07 2.23.09 6.58.09s4.88-.02 6.58-.09c2.58-.07 4.86-1.1 6.6-2.84 1.74-1.74 2.78-4.02 2.84-6.6.06-1.7.06-2.23.06-6.58s0-4.88-.06-6.58c-.07-2.58-1.1-4.86-2.84-6.6S25.16.83 22.58.77c-1-.4-2.18-.7-3.88-.77C16.98 0 16.45 0 16 0z"/><path fill="url(#ig-gradient)" d="M16 7.68c-4.6 0-8.32 3.72-8.32 8.32s3.72 8.32 8.32 8.32 8.32-3.72 8.32-8.32-3.72-8.32-8.32-8.32zm0 13.76c-3 0-5.44-2.44-5.44-5.44s2.44-5.44 5.44-5.44 5.44 2.44 5.44 5.44-2.44 5.44-5.44 5.44z"/><circle fill="url(#ig-gradient)" cx="24.42" cy="7.58" r="1.95"/></svg>
+                    <path fill="url(#ig-gradient)" d="M16 2.88c4.27 0 4.78.02 6.47.09 1.56.07 2.4.36 3.03.62.77.31 1.34.73 1.9 1.3.56.56.98 1.13 1.3 1.9.26.63.55 1.47.62 3.03.07 1.69.09 2.2.09 6.47s-.02 4.78-.09 6.47c-.07 1.56-.36 2.4-.62 3.03-.31.77-.73 1.34-1.3 1.9-.56.56-1.13.98-1.9 1.3-.63.26-1.47.55-3.03.62-1.69.07-2.2.09-6.47.09s-4.78-.02-6.47-.09c-1.56-.07-2.4-.36-3.03-.62-.77-.31-1.34-.73-1.9-1.3-.56-.56-.98-1.13-1.3-1.9-.26-.63-.55-1.47-.62-3.03-.07-1.69-.09-2.2-.09-6.47s.02-4.78.09-6.47c.07-1.56.36-2.4.62-3.03.31-.77.73-1.34 1.3-1.9.56-.56 1.13.98 1.9-1.3.63-.26 1.47-.55 3.03-.62C11.22 2.9 11.73 2.88 16 2.88zm0-2.88c-4.35 0-4.88.02-6.58.1-1.7.07-2.87.38-3.88.77-1.02.4-1.88.96-2.73 1.82-1.74 1.74-2.78 4.02-2.84 6.6C0 11.12 0 11.65 0 16s0 4.88.06 6.58c.07 2.58 1.1 4.86 2.84 6.6 1.74 1.74 4.02 2.78 6.6 2.84 1.7.07 2.23.09 6.58.09s4.88-.02 6.58-.09c2.58-.07 4.86-1.1 6.6-2.84 1.74-1.74 2.78-4.02 2.84-6.6.06-1.7.06-2.23.06-6.58s0-4.88-.06-6.58c-.07-2.58-1.1-4.86-2.84-6.6S25.16.83 22.58.77c-1-.4-2.18-.7-3.88-.77C16.98 0 16.45 0 16 0z"/><path fill="url(#ig-gradient)" d="M16 7.68c-4.6 0-8.32 3.72-8.32 8.32s3.72 8.32 8.32 8.32 8.32-3.72 8.32-8.32-3.72-8.32-8.32-8.32zm0 13.76c-3 0-5.44-2.44-5.44-5.44s2.44-5.44 5.44-5.44 5.44 2.44 5.44 5.44-2.44 5.44-5.44 5.44z"/><circle fill="url(#ig-gradient)" cx="24.42" cy="7.58" r="1.95"/></svg>
                 <span>IG</span>
             </a>
              <a href="https://distrokid.com/hyperfollow/scav/diastimoploia" target="_blank" rel="noopener noreferrer" class="social-note distrokid">
@@ -57,10 +56,9 @@
         </div>
         <div id="explosion-trigger" class="note note-4">???</div>
 
-        <!-- Laptop -->
         <div class="laptop">
             <div class="screen">
-                <span id="extracting-text">Extracting files...</span>
+                <span id="extracting-text">Project Scav</span>
                 <div class="progress-bar"><div class="progress"></div></div>
                 <span id="progress-text">33%</span>
             </div>
@@ -69,9 +67,8 @@
             </div>
         </div>
         
-        <!-- Footer -->
         <div class="footer-note">
-            &copy; 2025 Made by dedsec1121fk.
+            © 2025 Made by dedsec1121fk.
         </div>
     </div>
 
