--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="scene">
-        <div class="misc-note" style="top: 2.5%; left: 6%; width: 6%; height: 2.5%;"></div>
+        <div class="note tiktok-note">
+             <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@scav_drp/video/7116568843920444677" data-video-id="7116568843920444677" style="width: 100%; height: 100%;"> <section> <a target="_blank" title="@scav_drp" href="https://www.tiktok.com/@scav_drp?refer=embed">@scav_drp</a> <p></p> <a target="_blank" title="♬ original sound - scav_drp" href="https://www.tiktok.com/music/original-sound-7116568864708791045?refer=embed">♬ original sound - scav_drp</a> </section> </blockquote>
+        </div>
+
         <div class="misc-note" style="top: 2.5%; right: 16%; width: 6%; height: 2.5%;"></div>
         
         <div class="poster poster-1">
@@ -73,5 +76,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script async src="https://www.tiktok.com/embed.js"></script>
 </body>
 </html>
