--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Scav</title>
+    <title>Scav Project</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +59,7 @@
 
         <div class="laptop">
             <div class="screen">
-                <span id="extracting-text">Project Scav</span>
+                <span id="extracting-text">Scav Project</span>
                 <div class="progress-bar"><div class="progress"></div></div>
                 <span id="progress-text">33%</span>
             </div>
