--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="laptop">
             <div class="screen">
-                <span id="extracting-text">Scav Project</span>
+                <span id="extracting-text">Scav</span>
                 <div class="progress-bar"><div class="progress"></div></div>
                 <span id="progress-text">33%</span>
             </div>
